# music_demo

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: architecture.md
specs/001-recent-tracks/: plan.md  spec.md  tasks.md
specs/002-audio-backend/: design.md  plan.md  spec.md  tasks.md
src/: App.css  App.tsx  Library.ts  dialog.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: global.rs  lib.rs  music.rs  public.rs  storage.rs  storage_example.rs  types.rs
src-tauri/src/audio_quality/: metrics.rs  mod.rs  probe.rs  signal.rs
src-tauri/src/music_fetch/: mod.rs  wx.rs
src-tauri/src/music_fetch/bilibili/: mod.rs  ref.ts  search.rs  types.rs  utils.rs
src-tauri/src/music_fetch/bilibili/data/: mod.rs  search.rs
src-tauri/src/music_handler/: handler.rs  mod.rs  publics.rs  utils.rs
src/components/: MainPageContent.tsx  MiniPlayer.tsx  ParseUrl.tsx  SearchBar.tsx  SearchContent.tsx  SearchPage.tsx  Toast.tsx  TrackCard.tsx  TrackLibrary.tsx  TrackPage.tsx
src/components/player/: MiniPlayer.tsx
src/features/: TrackLists.tsx
src/hooks/: TrackLists.ts  playHooks.ts
src/layout/: MainLayout.tsx  MainPage.tsx  MainPage.tsx.bak
src/pages/: MainPage.tsx  SearchPage.tsx  TrackPage.tsx
src/platform/: types.ts
src/services/: dbServices.ts  invoke.ts
src/store/: Db.ts  Dialog.ts  Error.ts  Player.ts  Search.ts  State.ts
src/types/: player.ts  state.ts  track.ts
