[profile.dev.package."*"]
opt-level = 3
[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
rodio = { version = "0.21.1", features = ["symphonia-all"] }
tokio = "1.48.0"
reqwest = { version = "0.12.25", features = ["gzip", "json"] }
scraper = "0.25.0"
anyhow = "1.0.100"
regex = "1.12.2"
md5 = "0.8.0"
serde_derive = "1.0.228"
serde_path_to_error = "0.1.20"
derive-new = "0.7.0"
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["serde", "v4", "v5"] }
mutex = "1.0.2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
native_db = "0.8.2"
native_model = "0.4.20"
once_cell = "1.21.3"
sha256 = "1.6.0"
